# SimpleVoskAPI

./: .gitignore  1.py  Dockerfile  README.md  pyproject.toml  requirements.txt  upload.py
scripts/: download_vosk_model.py  upload_vosk_model.py
src/: decode.py  main.py
