[project]
name = "dockerwithvosk"
version = "0.1.0"
description = ""
authors = [
    {name = "MelancholicBastard",email = "handamir02@gmail.com"}
]
requires-python = ">=3.14"
dependencies = [
    "fastapi (>=0.135.1,<0.136.0)",
    "vosk (>=0.3.45,<0.4.0)",
    "uvicorn[standard] (>=0.41.0,<0.42.0)",
    "python-multipart (>=0.0.20,<0.1.0)",
    "python-dotenv (>=1.2.2,<2.0.0)",
    "huggingface-hub (>=1.7.1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry]
name = "dockerwithvosk"
version = "0.1.0"
packages = [
    { include = "src" }
]
